--- a/style.css
+++ b/style.css
@@ -1,7 +1,135 @@
 body {
-    font-family:Arialy
+    font-family:Arial, Helvetica, sans-serif
 }
 
-.container {
-    margin: 0 auto;
+.title {
+    background-color: rgb(255, 255, 255);
+    width: 98.7%;
+    text-align: center;
+    float: left;
+    padding:1px;
   }
+  
+  .list {
+    list-style-type:none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color:rgb(77, 76, 76);
+    left: 0px;
+    top: 0px;
+    list-style-position: inside;
+    position: sticky;
+    display: block;
+  }
+
+  .moreli:hover {
+   background-color: rgb(77, 76, 76);
+  }
+  
+
+  .list-link {
+    display: block;
+    background-color:rgb(77, 76, 76);
+    color: seashell;
+    padding: 12px;
+    text-align: center;
+    display: inline;
+    float: left;
+    text-decoration: none
+   }
+
+  .list-link:hover {
+    background-color:rgb(0, 0, 0);
+  }
+  
+  body {
+    background-size: 50px;
+  }
+  
+  .newstext {
+    text-align:left;
+    float: right;
+  }
+  
+  .dc {
+    width:350px;
+    height:500px;
+  }
+  
+  /* Style the header */
+  header {
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 35px;
+    color: white;
+  }
+  
+  .error {
+    margin: 30px;
+    font-size: 120px;
+    color:transparent;
+    -webkit-text-stroke: 2px rgb(255, 255, 255);
+  }
+  
+  nav {
+    float: left;
+    width: 30%;
+    height: 300px; 
+    background: #ccc;
+    padding: 20px;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  article {
+    float: left;
+    padding: 20px;
+    width: 70%;
+    background-color: #f1f1f1;
+    height: 300px; /* only for demonstration, should be removed */
+  }
+  
+  /* Clear floats after the columns */
+  section::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Style the footer */
+  footer {
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+    text-align: center;
+    color: white;
+  }
+  
+  @media only screen and (max-width: 800px) {
+    .news {
+      width: 94.5%;
+    }
+    #newss {
+      width: 94.5%;
+    }
+    .list-link {
+      width: 95.5%;
+      display: inline;
+    }
+
+    .moreli {
+      width: 105%;
+    }
+    .title {
+      width: 94%;
+    }
+  
+    .dc {
+      width:300px;
+      height:500px;
+    }
+  }
+  
