--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .title {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(255,255,255);
     width: 98.7%;
     text-align: center;
     float: left;
